@@ -1,76 +1,52 @@
 plugins {
-    id 'ca.coglinc.javacc' version '2.4.0'
-    id 'antlr'
+    id 'java-test-fixtures'
 }
 
-//repositories { jcenter() }
+description = "Core functionality (terms, rules, prover, ...) for deductive verification of Java programs"
 
 configurations { antlr4 }
 
 dependencies {
     api project(':key.util')
-    //api group: group, name: 'recoderkey', version: '1.0'
-    api project(':recoder')
-    implementation group: 'net.java.dev.javacc', name: 'javacc', version: '4.0'
-    implementation group: 'org.antlr', name: 'antlr-runtime', version: '3.5.3'
-    implementation group: 'antlr', name: 'antlr', version: '2.7.7'
+    api project(':key.ncore')
+    api project(':key.ncore.calculus')
 
-    javacc group: 'net.java.dev.javacc', name: 'javacc', version: '4.0'
-    antlr group: 'org.antlr', name: 'antlr', version: '3.5.3'   // use ANTLR version 3
+    antlr4 "org.antlr:antlr4:4.13.2"
+    api "org.antlr:antlr4-runtime:4.13.2"
 
-    antlr4 "org.antlr:antlr4:4.12.0"
-    api "org.antlr:antlr4-runtime:4.12.0"
-    //implementation group: 'com.google.guava', name: 'guava', version: '28.1-jre'
+    api project(':key.util')
+
+    def JP_VERSION = "3.28.0-K13.5"
+    api "org.key-project.proofjava:javaparser-core:$JP_VERSION"
+    api "org.key-project.proofjava:javaparser-core-serialization:$JP_VERSION"
+    api "org.key-project.proofjava:javaparser-symbol-solver-core:$JP_VERSION"
+
+    testImplementation("com.google.truth:truth:1.4.5")
+    testImplementation(project(":key.core"))
+
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-yaml
+    testImplementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.21.2'
+
+    // test fixtures
+    testFixturesApi(testFixtures(project(":key.util")))
 }
 
 // The target directory for JavaCC (parser generation)
-def javaCCOutputDir = file("${buildDir}/generated-src/javacc")
-def javaCCOutputDirMain = file("$javaCCOutputDir/main")
+//def javaCCOutputDir = layout.buildDirectory.dir("generated-src/javacc").getOrNull()
+//def javaCCOutputDirMain = file("$javaCCOutputDir/main")
 
-sourceSets.main.java.srcDirs(javaCCOutputDirMain, "$projectDir/build/generated-src/antlr4/main/")
+sourceSets.main.java.srcDirs("$projectDir/build/generated-src/antlr4/main/")
 
-// Generate code from ANTLR grammars.
-generateGrammarSource {
-    maxHeapSize = "64m"
-    arguments += ["-visitor", "-listener", "-long-messages"]
-}
 
-// Generate code from ANTLR grammars in testing.
-generateTestGrammarSource {
-    maxHeapSize = "64m"
-    arguments += ["-visitor", "-listener", "-long-messages"]
-}
-
-// Generate code from JavaCC grammars.
-compileJavacc {
-    outputDirectory = javaCCOutputDirMain
-    inputDirectory = file("src/main/javacc")
-    doLast {
-        // Some manual overwriting of Token files needed
-        copy {
-            from("src/main/javacc/de/uka/ilkd/key/parser/schemajava/Token.java")
-            into "$javaCCOutputDirMain/de/uka/ilkd/key/parser/schemajava/"
-        }
-        copy {
-            from("src/main/javacc/de/uka/ilkd/key/parser/proofjava/Token.java")
-            into "$javaCCOutputDirMain/de/uka/ilkd/key/parser/proofjava/"
-        }
-        copy {
-            from("src/main/javacc/de/uka/ilkd/key/parser/schemajava/JavaCharStream.java")
-            into "$javaCCOutputDirMain/de/uka/ilkd/key/parser/schemajava/"
-        }
-        copy {
-            from("src/main/javacc/de/uka/ilkd/key/parser/proofjava/JavaCharStream.java")
-            into "$javaCCOutputDirMain/de/uka/ilkd/key/parser/proofjava/"
-        }
-    }
-}
-
-task generateSMTListings {
+tasks.register('generateSMTListings') {
     def pack = "de/uka/ilkd/key/smt/newsmt2"
     def resourcesDir = "${project.projectDir}/src/main/resources"
     def outputDir = resourcesDir // in the future that should be "${project.buildDir}/resources/main"
     // ${project.buildDir}
+    inputs.files fileTree("$resourcesDir/$pack", {
+        exclude "$resourcesDir/$pack/DefinedSymbolsHandler.preamble.xml"
+    })
+    outputs.files file("$outputDir/$pack/DefinedSymbolsHandler.preamble.xml")
     doLast {
         new File("$outputDir/$pack/DefinedSymbolsHandler.preamble.xml").withWriter { list ->
             list.writeLine '<?xml version="1.0" encoding="UTF-8" standalone="no"?>'
@@ -87,11 +63,15 @@ task generateSMTListings {
     }
 }
 
-task generateSolverPropsList {
+tasks.register('generateSolverPropsList') {
     def pack = "de/uka/ilkd/key/smt/solvertypes"
     def resourcesDir = "${project.projectDir}/src/main/resources"
     def outputDir = resourcesDir // in the future that should be "${project.buildDir}/resources/main"
     // ${project.buildDir}
+    inputs.files fileTree("$outputDir/$pack/", {
+        exclude "./solvers.txt"
+    })
+    outputs.files file("$outputDir/$pack/solvers.txt")
     doLast {
         def list = []
         def dir = new File("$outputDir/$pack/")
@@ -100,14 +80,13 @@ task generateSolverPropsList {
                 list.add(file.name)
             }
         })
-        if (!file("$outputDir/$pack/solvers.txt").exists()) {
-            String files = ''
-            for (String propsFile : list) {
-                files += propsFile + System.lineSeparator()
-            }
-            new File("$outputDir/$pack/solvers.txt").withWriter { listSolvers ->
-                listSolvers.write files
-            }
+        list.sort()
+        String files = ''
+        for (String propsFile : list) {
+            files += propsFile + System.lineSeparator()
+        }
+        new File("$outputDir/$pack/solvers.txt").withWriter { listSolvers ->
+            listSolvers.write files
         }
     }
 }
@@ -121,33 +100,24 @@ tasks.withType(Test) {
 }
 
 
-task testProveRules(type: Test) {
-    description 'Proves KeY taclet rules tagged as lemma'
-    group "verification"
+tasks.register('testProveRules', Test) {
+    description = 'Proves KeY taclet rules tagged as lemma'
+    group = "verification"
     filter { includeTestsMatching "ProveRulesTest" }
     //useJUnitPlatform() {includeTags "testProveRules"    }
 }
 
-task testRunAllFunProofs(type: Test) {
-    description 'Prove/reload all keyfiles tagged for regression testing'
-    group "verification"
+tasks.register('testRunAllFunProofs', Test) {
+    description = 'Prove/reload all keyfiles tagged for regression testing'
+    group = "verification"
     filter {
         includeTestsMatching "RunAllProofsFunctional"
     }
 }
 
-task testRunAllInfProofs(type: Test) {
-    description 'Prove/reload all keyfiles tagged for regression testing'
-    group "verification"
-    filter {
-        includeTestsMatching "RunAllProofsInfFlow"
-    }
-}
-
-
-task testProveSMTLemmas(type: Test) {
-    description 'Prove (or load proofs for) lemmas used in the SMT translation'
-    group "verification"
+tasks.register('testProveSMTLemmas', Test) {
+    description = 'Prove (or load proofs for) lemmas used in the SMT translation'
+    group = "verification"
     filter {
         includeTestsMatching "ProveSMTLemmasTest"
     }
@@ -155,9 +125,9 @@ task testProveSMTLemmas(type: Test) {
 
 // Run the tests for the new smt translation in strict mode
 // where "unknown" is less accepted
-task testStrictSMT(type: Test) {
-    description 'Run the tests for the new smt translation in strict mode'
-    group 'verification'
+tasks.register('testStrictSMT', Test) {
+    description = 'Run the tests for the new smt translation in strict mode'
+    group = 'verification'
     systemProperty("key.newsmt2.stricttests", "true")
     filter {
         includeTestsMatching "MasterHandlerTest"
@@ -165,12 +135,13 @@ task testStrictSMT(type: Test) {
 }
 
 //Generation of the three version files within the resources by executing `git'.
-task generateVersionFiles() {
+tasks.register('generateVersionFiles') {
     def outputFolder = file("build/resources/main/de/uka/ilkd/key/util")
     def sha1 = new File(outputFolder, "sha1")
     def branch = new File(outputFolder, "branch")
     def versionf = new File(outputFolder, "version")
 
+    inputs.files "$project.rootDir/.git/HEAD"
     outputs.files sha1, branch, versionf
 
     def gitRevision = gitRevParse('HEAD')
@@ -183,11 +154,21 @@ task generateVersionFiles() {
     }
 }
 
+// Helper function that calls "git rev-parse" to
+// find names/SHAs for commits
+static def gitRevParse(String args) {
+    try {
+        return "git rev-parse $args".execute().text.trim()
+    } catch (Exception e) {
+        return ""
+    }
+}
+
 // @AW: Say something here. From POV this explain by itself.
-processResources.dependsOn generateVersionFiles
+processResources.dependsOn generateVersionFiles, generateSolverPropsList, generateSMTListings
 
 def antlr4OutputKey = "$projectDir/build/generated-src/antlr4/main/de/uka/ilkd/key/nparser"
-task runAntlr4Key(type: JavaExec) {
+tasks.register('runAntlr4Key', JavaExec) {
     //see incremental task api, prevents rerun if nothing has changed.
     inputs.files "src/main/antlr4/KeYLexer.g4", "src/main/antlr4/KeYParser.g4"
     outputs.dir antlr4OutputKey
@@ -204,7 +185,7 @@ task runAntlr4Key(type: JavaExec) {
 }
 compileJava.dependsOn runAntlr4Key
 
-task debugKeyLexer(type: JavaExec) {
+tasks.register('debugKeyLexer', JavaExec) {
     mainClass.set("de.uka.ilkd.key.nparser.DebugKeyLexer")
     classpath = sourceSets.main.runtimeClasspath
     standardInput = System.in
@@ -214,7 +195,7 @@ task debugKeyLexer(type: JavaExec) {
 processResources.dependsOn generateVersionFiles
 
 def antlr4OutputJml = "$projectDir/build/generated-src/antlr4/main/de/uka/ilkd/key/speclang/njml"
-task runAntlr4Jml(type: JavaExec) {
+tasks.register('runAntlr4Jml', JavaExec) {
     //see incremental task api, prevents rerun if nothing has changed.
     inputs.files "src/main/antlr4/JmlLexer.g4", "src/main/antlr4/JmlParser.g4"
     outputs.dir antlr4OutputJml
@@ -231,22 +212,44 @@ task runAntlr4Jml(type: JavaExec) {
 }
 compileJava.dependsOn runAntlr4Jml
 
-task debugJmlLexer(type: JavaExec) {
+tasks.register('debugJmlLexer', JavaExec) {
     mainClass.set("de.uka.ilkd.key.speclang.njml.DebugJmlLexer")
     classpath = sourceSets.main.runtimeClasspath
     standardInput = System.in
 }
 
-task ptest(type: Test) { group "verification" }
+tasks.register('ptest', Test) { group = "verification" }
 
-task generateRAPUnitTests(type: JavaExec) {
+def rapDir = layout.buildDirectory.dir("generated-src/rap/").getOrNull()
+
+tasks.register('generateRAPUnitTests', JavaExec) {
     classpath = sourceSets.test.runtimeClasspath
     mainClass.set("de.uka.ilkd.key.proof.runallproofs.GenerateUnitTests")
-    args("$buildDir/generated-src/rap/")
+    args(rapDir)
 }
-sourceSets.test.java.srcDirs("$buildDir/generated-src/rap/")
 
+tasks.register("testRAP", Test) {
+    description = "Testng the generated RAP unit tests"
+    group = "verification"
+    dependsOn('generateRAPUnitTests', 'testClasses')
 
-// @AW: Delete? weigl: depends: If want that gradle check validates everything then not.
-// check.dependsOn << testProofRules << testRunAllProofs
+    forkEvery = 1
+    maxParallelForks = 2
+    useJUnitPlatform()
+    it.filter {
+        it.includeTestsMatching "de.uka.ilkd.key.proof.runallproofs.gen.*"
+    }
+    // set heap size for the test JVM(s)
+    minHeapSize = "1g"
+    maxHeapSize = "3g"
 
+    // set JVM arguments for the test JVM(s)
+    //jvmArgs('-XX:MaxPermSize=1g')
+    failFast=false
+    testLogging.showStandardStreams = false
+    testLogging.displayGranularity = 1
+}
+
+sourceSets.test.java.srcDirs(rapDir)
+
+sourcesJar.dependsOn(runAntlr4Jml, runAntlr4Key)
